tests/ui/functional-struct-update/fru-on-enum-variant.stderr
error[E0436]: functional record update syntax requires a struct
  --> $DIR/fru-on-enum-variant.rs:6:22
   |
LL |     Foo::A { x: 6, ..orig };
   |                      ^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0436`.
